<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/menu_btn"
        android:textSize="35sp"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:background="@drawable/shape1"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/pizza_op"
        android:textSize="25sp"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:layout_margin="5dp"
        android:background="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/red"
        android:layout_margin="5dp">
    <Button
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/btn_per"
        android:gravity="start"
        android:layout_margin="5dp"
        android:id="@+id/btn_personal" />

    <Button
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:text="@string/btn_fam"
        android:gravity="start"
        android:layout_margin="5dp"
        android:id="@+id/btn_family"/>


    <Button
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/btn_big"
        android:gravity="start"
        android:layout_margin="5dp"
        android:id="@+id/btn_big_pizza"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_top"
        android:textSize="25sp"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:background="@color/black"/>
    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
        android:background="@color/red"
    android:layout_margin="5dp">


    <Button
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/btn_olive"
        android:gravity="start"
        android:id="@+id/btn_Olive"/>

    <Button
        android:layout_width="105dp"
        android:layout_height="40dp"
        android:text="@string/btn_p"
        android:gravity="start"
        android:id="@+id/btn_P"/>

        <Button
            android:layout_width="105dp"
            android:layout_height="40dp"
            android:text="@string/btn_mush"
            android:gravity="start"
            android:id="@+id/btn_Mush"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/btn_onion"
            android:gravity="start"
            android:id="@+id/btn_Onion"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/btn_inv"
        android:textSize="30sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:id="@+id/Order"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/rat_btn"
        android:layout_margin="10dp"
        android:background="@color/material_2"/>


    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:duplicateParentState="true"
        android:background="@drawable/shape2"
        android:numStars="5"
        android:stepSize="0.5" />



    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextB"
        android:textColor="@color/white"
        android:id="@+id/next"/>

</LinearLayout>

